--- a/app/index.html
+++ b/app/index.html
@@ -1,7 +1,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>ReactJS: Animation</title>
+    <title>Twitbeat</title>
     <!-- Favicons -->
     <link rel="apple-touch-icon" sizes="57x57" href="images/apple-touch-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="images/apple-touch-icon-60x60.png">
