--- a/app/index.html
+++ b/app/index.html
@@ -29,8 +29,8 @@
     <!-- CSS -->
     <link rel="stylesheet" href="assets/stylesheets/app.css"/>
 </head>
-<body style="padding:0;margin:0; background-color:#111; height: 100%;overflow:hidden;">
+<body style="padding:0;margin:0; background-color:#fff; height: 100%;overflow:hidden;">
 <div id="app"></div>
-<script type="application/javascript" src="client.js"></script>
+<script type="application/javascript" src="./client.js"></script>
 </body>
 </html>
