--- a/app/index.html
+++ b/app/index.html
@@ -31,6 +31,10 @@
 </head>
 <body style="padding:0;margin:0; background-color:#111; height: 100%;overflow:hidden;">
 <div id="app"></div>
+<script src="https://cdn.socket.io/socket.io-1.3.5.js"></script>
 <script type="application/javascript" src="client.js"></script>
+<script>
+  var socket = io();
+</script>
 </body>
 </html>
